--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -25,7 +25,7 @@ publisher:
 # use cases, the value can be an object with keys for id, uri, and version.
 #
 dependencies:
-  who.fhir.smart-base: current
+  who.fhir.smart-base: dev
   hl7.fhir.uv.sdc: 3.0.0
 #   hl7.fhir.us.core: 3.1.0
 #   hl7.fhir.us.mcode:
@@ -174,7 +174,7 @@ menu:
 
 meta:
   profile:
-    - http://worldhealthorganization.github.io/smart-base/StructureDefinition/SGImplementationGuide
+    - http://smart.who.int/ig/smart-base/ImplementationGuide-SMARTImplementationGuide
 
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
 # │  Uncomment the properties below to configure additional properties on the ImplementationGuide  │
