--- a/.github/workflows/ghbuild.yml
+++ b/.github/workflows/ghbuild.yml
@@ -20,4 +20,4 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   call_build: 
-    uses: WorldHealthOrganization/smart-base/.github/workflows/main.yml@master
+    uses: WorldHealthOrganization/smart-base/.github/workflows/main.yml@main
