--- a/testing/docker/logic/docker-compose.yml
+++ b/testing/docker/logic/docker-compose.yml
@@ -15,13 +15,17 @@ services:
        - hapi.fhir.allow_multiple_delete=true
        - hapi.fhir.reuse_cached_search_results_millis=1000
 
-       - hapi.fhir.implementationguides.${ig_name:-this}.url=${ig_url}/package.tgz
-       - hapi.fhir.implementationguides.${ig_name:-this}.name=${ig_package_name}
-       - hapi.fhir.implementationguides.${ig_name:-this}.version=${ig_version}
+      #  - hapi.fhir.implementationguides.${ig_name:-this}.url=${ig_url}/package.tgz
+      #  - hapi.fhir.implementationguides.${ig_name:-this}.name=${ig_package_name}
+      #  - hapi.fhir.implementationguides.${ig_name:-this}.version=${ig_version}
 
-  busybox:
-    image: costateixeira/busybox:latest
-    volumes:
-      - ./app:/home/static
+  web:
+    image: nginx:alpine
+    container_name: webserver
     ports:
-      - ${static_server_port:-8087}:3000
+      - ${static_server_port:-8087}:80
+    command: /bin/sh -c "apk --no-cache add git && \
+                         cd /tmp && \
+                         git clone https://github.com/PATH-Global-Health/MERindicators.git && \
+                         cp -r /tmp/MERindicators/test/server/app/* /usr/share/nginx/html/ && \
+                         nginx -g 'daemon off;'"
