--- a/testing/docker/logic/docker-compose.yml
+++ b/testing/docker/logic/docker-compose.yml
@@ -31,14 +31,10 @@ services:
       wget -O resources.json $ig_url/package.db && \
       echo '{\"ig_url\": \"'$ig_url'\", \"server_url\": \"http://localhost:'$server_port'/fhir\"}' > config.json && \
       cd /tmp && \
-      rm -rf MERindicators && \
-      git clone https://github.com/PATH-Global-Health/MERindicators.git && \
-      cp -r /tmp/MERindicators/test/server/app/* /usr/share/nginx/html/ && \
-      cd /usr/share/nginx/html/ && \
-      echo '{\"ig_url\": \"'$ig_url'\", \"server_url\": \"http://localhost:'$server_port'/fhir\"}' > config.json && \
+      rm -rf smart-ig-starter-kit && \
+      git clone https://github.com/WorldHealthOrganization/smart-ig-starter-kit.git && \
+      cp -r /tmp/smart-ig-starter-kit/testing/app/* /usr/share/nginx/html/ && \
       nginx -g 'daemon off;'"
-
-
-
+      
     volumes:
       - ./nginx-content:/usr/share/nginx/html                         
