Moved Libraries to input instead of SUSHI

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -299,5 +299,6 @@ parameters:
     - input/actors
     - input/maps
     - input/resources/device
+    - input/resources/library
   special-url:
     - http://id.who.int/icd11/mms
