--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -4,7 +4,7 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: who.fhir.smart-immunizations-measles
-canonical: http://smart.who.int/ig/smart-immunizations-measles
+canonical: http://moh.zambia/ig/smart-immunizations-measles
 name: SMART
 # title: Example Title
 # description: Example Implementation Guide for getting started with SUSHI
