--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,9 +3,9 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: who.fhir.smart-immunizations-measles
+id: zambia.fhir.smart-immunizations-measles
 canonical: http://moh.zambia/ig/smart-immunizations-measles
-name: SMART
+name: ZAMBIA
 # title: Example Title
 # description: Example Implementation Guide for getting started with SUSHI
 status: draft # draft | active | retired | unknown
