--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,7 +3,7 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: who.fhir.smart-immunizations-measles
+id: kenya.fhir.smart-immunizations-measles
 canonical: http://moh.kenya.int/ig/smart-immunizations-measles
 name: SMART
 # title: Example Title
