--- a/testing/docker/questionnaires/docker-compose.yml
+++ b/testing/docker/questionnaires/docker-compose.yml
@@ -36,7 +36,7 @@ services:
 
   web:
     image: nginx:alpine
-    container_name: webserver    
+    container_name: ${ig_code}-web
     volumes:
       - ./nginx-content:/usr/share/nginx/html                         
       - ../../../output:/tmp/output      
