--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -6,8 +6,8 @@
 id: who.fhir.smart-immunizations-measles
 canonical: http://smart.who.int/ig/smart-immunizations-measles
 name: SMART
-# title: Example Title
-# description: Example Implementation Guide for getting started with SUSHI
+title: WHO SMART Guidelines - Measles Immunization
+description: WHO SMART Guidelines - Measles Immunization (Demonstration specification)
 status: draft # draft | active | retired | unknown
 version: 0.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
