--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,5 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-who.fhir.smart-immunizations-measles.json
 
-template = #local-template
-#template = who.fhir.template#current
+#template = #local-template
+template = who.fhir.template#current
