--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,7 +3,7 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: smart.who.int.immunization-measles
+id: smart.who.int.immunizations-measles
 canonical: http://smart.who.int/immunizations-measles
 name: SMART
 title: WHO SMART Guidelines - Measles Immunization
