--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     branches:
       - release-candidate
-
+  workflow_dispatch:
+  
 jobs:
   check:
     runs-on: ubuntu-latest
