--- a/ig.ini
+++ b/ig.ini
@@ -2,4 +2,4 @@
 ig = fsh-generated/resources/ImplementationGuide-smart.who.int.immunizations-measles.json
 
 #template = #local-template
-template = who.fhir.template#current
+template = who.template.root#current
