--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,5 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-smart.who.int.immunizations-measles.json
 
-#template = #local-template
-template = who.template.root#current
+template = #local-template
+;template = who.template.root#current
