--- a/local-template/package/package.json
+++ b/local-template/package/package.json
@@ -5,8 +5,8 @@
   "license": "CC0-1.0",
   "description": "Local template extension for WHO SMART FHIR IG",
   "author": "http://who.int",
-    "base":  "who.fhir.template",
+    "base":  "who.template.root",
   "dependencies": {
-    "who.fhir.template": "current"
+    "who.template.root": "current"
   }
 }
