--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -25,10 +25,14 @@ publisher:
 # use cases, the value can be an object with keys for id, uri, and version.
 #
 dependencies:
-  who.base: dev
+  hl7.terminology: 5.5.0
+  hl7.fhir.uv.extensions: 5.1.0-cibuild
+  hl7.fhir.uv.cql: 1.0.0-snapshot
+  hl7.fhir.uv.crmi: 1.0.0-snapshot
   hl7.fhir.uv.sdc: 3.0.0
   hl7.fhir.uv.cpg: current
   hl7.fhir.us.cqfmeasures: current
+  who.base: dev
 
 #
 #
