--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -32,6 +32,7 @@ dependencies:
   hl7.fhir.uv.sdc: 3.0.0
   hl7.fhir.uv.cpg: current
   hl7.fhir.us.cqfmeasures: current
+  fhir.cqf.common: 4.0.1
   who.base: dev
 
 #
