--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -34,6 +34,7 @@ dependencies:
   hl7.fhir.uv.cpg: current
   hl7.fhir.us.cqfmeasures: current
   fhir.cqf.common: 4.0.1
+  smart.who.int.base: current$br-update-dependencies
 
 #
 #
